# DaedalusKit

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
bytecode/: Cargo.toml
bytecode/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: main.rs
daedalus-bytecode/: Cargo.toml
daedalus-bytecode/src/: lib.rs
daedalus-compiler/: Cargo.toml
daedalus-compiler/src/: builtin.rs  const_eval.rs  dat_symbol_table.rs  files.rs  main.rs  symbol_indices.rs
daedalus-fmt/: Cargo.toml
daedalus-fmt/src/: fmt.rs  impls.rs  lib.rs  main.rs
daedalus-fmt/tests/: g2notr.rs
daedalus-lexer/: Cargo.toml
daedalus-parser/: Cargo.toml
daedalus-parser/src/: lib.rs  main.rs
daedalus-parser/src/parse/: block.rs  class.rs  const_def.rs  expr.rs  extern_func.rs  func.rs  func_call.rs  ident.rs  if_statement.rs  instance.rs  mod.rs  prototype.rs  return_statement.rs  ty.rs  var.rs
daedalus-parser/tests/: g2notr.rs
dat/: Cargo.toml
dat-file/: Cargo.toml
dat-file/src/: lib.rs  zstring.rs
dat-file/tests/: diff.rs
dat/src/: lib.rs  zstring.rs
dat/tests/: diff.rs
interner/: Cargo.toml
interner/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
output-units/: Cargo.toml
output-units/src/: lib.rs  main.rs
output-units/tests/: diff.rs
parser/: Cargo.toml
parser/src/: lib.rs  main.rs
parser/src/parse/: assign_statement.rs  block.rs  class.rs  const_def.rs  expr.rs  extern_func.rs  func.rs  func_call.rs  ident.rs  if_statement.rs  instance.rs  mod.rs  prototype.rs  return_statement.rs  ty.rs  var.rs
parser/tests/: g2notr.rs
src/: fmt.rs  lex.rs  main.rs
src-file/: Cargo.toml
src-file/src/: lib.rs  main.rs
src/parse/: assign_statement.rs  block.rs  func.rs  func_call.rs  if_statement.rs  instance.rs  mod.rs  return_statement.rs  var.rs
test_data/: builtin-gothic.d  classes.d  startup.d
zenkit/: Cargo.toml  build.rs
zenkit/src/: lib.rs  main.rs
zstring/: Cargo.toml
zstring/src/: lib.rs
