[workspace]
resolver = "2"
members = ["bytecode", "compiler", "dat", "daedalus-lexer", "output-units", "parser", "src-file"]

[workspace.dependencies]
bytecode = { path = "./bytecode" }
daedalus-lexer = { path = "./daedalus-lexer" }
parser = { path = "./parser" }
src-file = { path = "./src-file" }
dat = { path = "./dat" }
# Off for now, until it is statically linkable
# zenkit = { path = "./zenkit" }

bitflags = "2.4.2"
bstr = "1.9.1"
byteorder = "1.5.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
encoding_rs = "0.8.33"
logos = "0.14.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
thiserror = "1.0.58"
