[workspace]
resolver = "2"
members = [
  "daedalus-bytecode",
  "daedalus-compiler",
  "daedalus-lexer",
  "daedalus-parser",
  "dat-file",
  "output-units",
  "src-file",
]

[workspace.dependencies]
daedalus-bytecode = { path = "./daedalus-bytecode" }
daedalus-lexer = { path = "./daedalus-lexer" }
daedalus-parser = { path = "./daedalus-parser" }
dat-file = { path = "./dat-file" }
src-file = { path = "./src-file" }
# Off for now, until it is statically linkable
# zenkit = { path = "./zenkit" }

bitflags = "2.4.2"
bstr = "1.9.1"
byteorder = "1.5.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
encoding_rs = "0.8.33"
logos = "0.14.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
thiserror = "1.0.58"
