[package]
name = "daedalus-compiler"
version = "0.1.0"
edition = "2021"

[features]
default = ["code-span-compat"]
code-span-compat = []

[dependencies]
daedalus-bytecode.workspace = true
dat-file.workspace = true
daedalus-parser.workspace = true
zstring.workspace = true

codespan.workspace = true
codespan-reporting.workspace = true
encoding_rs.workspace = true
bitflags.workspace = true
byteorder.workspace = true
num-derive.workspace = true
num-traits.workspace = true
