[package]
name = "daedalus-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
daedalus-lexer.workspace = true
codespan-reporting.workspace = true
encoding_rs.workspace = true
logos.workspace = true
thiserror.workspace = true

src-file.workspace = true

[dev-dependencies]
indoc = "2"
pretty_assertions = "1.4.0"
