[package]
name = "dat-file"
version = "0.1.0"
edition = "2021"

[dependencies]
daedalus-bytecode.workspace = true
zstring.workspace = true

encoding_rs.workspace = true
bitflags.workspace = true
byteorder.workspace = true
num-derive.workspace = true
num-traits.workspace = true

pretty_assertions = "1"

